# Songbird-Py

./: Cargo.toml  pyproject.toml
.github/workflows/: publish.yml
src/: driver.rs  event.rs  lib.rs  seekable.rs  source.rs  track.rs
