[package]
name = "songbird-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "songbird"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.20.0", features = ["sync"] }
async-trait = "0.1.53"
pyo3-log = "0.7.0"
log = "0.4.17"
futures = "0.3.21"
songbird = { version = "0.3.0", features = ["driver"] }

[dependencies.pyo3]
version = "^0.17.3"
features = ["extension-module"]

[dependencies.pyo3-asyncio]
version = "^0.17.0"
features = ["attributes", "tokio-runtime"]
